sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value debut
debut=0; fin=length-2;
^AlgCocktailSort2:6: error: not found: value fin
debut=0; fin=length-2;
         ^AlgCocktailSort2:15: error: not found: value fin
		fin-=1;
                ^AlgCocktailSort2:22: error: not found: value debut
		debut += 1;
                ^